force-app/main/default/objects/DEVICE_MNG__x/DEVICE_MNG__x.object-meta.xml
<CustomObject>
    <description>DEVICE_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>DEVICE_MNG</externalName>
    <label>機器管理</label>
</CustomObject>