force-app/main/default/objects/DEVICE_MNG__x/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>機器管理</relationshipLabel>
    <relationshipName>ContactName</relationshipName>
    <type>Lookup</type>
</CustomField>