force-app/main/default/objects/DEVICE_MNG__x/fields/device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>device_mng_id__c</fullName>
    <description>device_mng_id</description>
    <externalDeveloperName>device_mng_id</externalDeveloperName>
    <label>機器管理ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>