force-app/main/default/objects/DEVICE_MNG__x/fields/device_name__c.field-meta.xml
<CustomField>
    <fullName>device_name__c</fullName>
    <description>device_name</description>
    <externalDeveloperName>device_name</externalDeveloperName>
    <label>機器名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>