force-app/main/default/objects/DEVICE_MNG__x/fields/device_status_mst_id__c.field-meta.xml
<CustomField>
    <fullName>device_status_mst_id__c</fullName>
    <description>device_status_mst_id</description>
    <externalDeveloperName>device_status_mst_id</externalDeveloperName>
    <label>機器状態</label>
    <length>36</length>
    <referenceTo>DEVICE_STATUS_MST__x</referenceTo>
    <relationshipLabel>機器管理</relationshipLabel>
    <relationshipName>device_mng</relationshipName>
    <type>ExternalLookup</type>
</CustomField>