force-app/main/default/objects/DEVICE_MNG__x/fields/ins_syn_no__c.field-meta.xml
<CustomField>
    <fullName>ins_syn_no__c</fullName>
    <description>ins_syn_no</description>
    <externalDeveloperName>ins_syn_no</externalDeveloperName>
    <label>登録社員No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>