force-app/main/default/objects/DEVICE_MNG__x/fields/ins_time__c.field-meta.xml
<CustomField>
    <fullName>ins_time__c</fullName>
    <description>ins_time</description>
    <externalDeveloperName>ins_time</externalDeveloperName>
    <label>登録日時</label>
    <type>DateTime</type>
</CustomField>