force-app/main/default/objects/DEVICE_MNG__x/fields/mac_address__c.field-meta.xml
<CustomField>
    <fullName>mac_address__c</fullName>
    <description>mac_address</description>
    <externalDeveloperName>mac_address</externalDeveloperName>
    <label>MACアドレス</label>
    <length>12</length>
    <type>Text</type>
</CustomField>