force-app/main/default/objects/DEVICE_MNG__x/fields/property_room_mng_id__c.field-meta.xml
<CustomField>
    <fullName>property_room_mng_id__c</fullName>
    <description>property_room_mng_id</description>
    <externalDeveloperName>property_room_mng_id</externalDeveloperName>
    <label>物件部屋管理</label>
    <length>36</length>
    <referenceTo>PROPERTY_ROOM_MNG__x</referenceTo>
    <relationshipLabel>機器管理</relationshipLabel>
    <relationshipName>device_mng</relationshipName>
    <type>ExternalLookup</type>
</CustomField>