force-app/main/default/objects/DEVICE_MNG__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>device_name__c</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>